// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`history component should render correctly 1`] = `
.emotion-0 {
  background-color: transparent;
  border-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 0.9rem;
  margin: 0 0.3rem;
  color: white;
}

.emotion-1 {
  background-color: transparent;
  border-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 0.9rem;
  margin: 0 0.3rem;
}

<div
  className="history-container"
>
  <div
    className="history-container__filters"
  >
    <div
      className="history-container__filter-group"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        selected={true}
      >
        CLOSE
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        OPEN
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        HIGH
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        LOW
      </button>
    </div>
    <div
      className="history-container__filter-group"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        selected={true}
      >
        YTD
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        1D
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        1M
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        6M
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        1Y
      </button>
      <button
        className="emotion-1"
        onClick={[Function]}
        selected={false}
      >
        5Y
      </button>
    </div>
  </div>
  <div
    className="history-container__chart"
  >
    <div
      className="recharts-responsive-container chart-container"
      style={
        Object {
          "height": 420,
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "visibility": "hidden",
            "zIndex": -1,
          }
        }
      >
        <div
          onScroll={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": -1,
            }
          }
        >
          <div
            style={
              Object {
                "height": NaN,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": NaN,
              }
            }
          />
        </div>
        <div
          onScroll={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": -1,
            }
          }
        >
          <div
            style={
              Object {
                "height": "200%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "200%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`history component should render history chart correctly 1`] = `
<div
  className="recharts-responsive-container chart-container"
  style={
    Object {
      "height": 420,
      "maxHeight": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "visibility": "hidden",
        "zIndex": -1,
      }
    }
  >
    <div
      onScroll={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "visibility": "hidden",
          "zIndex": -1,
        }
      }
    >
      <div
        style={
          Object {
            "height": NaN,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": NaN,
          }
        }
      />
    </div>
    <div
      onScroll={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "visibility": "hidden",
          "zIndex": -1,
        }
      }
    >
      <div
        style={
          Object {
            "height": "200%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "200%",
          }
        }
      />
    </div>
  </div>
</div>
`;
